--- a/templates/login.html
+++ b/templates/login.html
@@ -1,14 +1,18 @@
 {% extends 'main.html' %}
 {% block content %}
 
+
 <div class="container">
     <div class="navbar">
-        Hello
+        <img src="/static/images/assets/dinder.svg" draggable="false">
     </div>
+
 
 
 </div>
 
-<script src="/static/js/index.js"></script>
+<script src="/static/js/login.js"></script>
+
+
 
 {% endblock content %}
