--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,14 @@
         <img src="/static/images/assets/dinder.svg" draggable="false">
     </div>
 
+    <div class="login-input-container">
+        <img class="hero-image" src="/static/images/assets/hero.png" alt="">
+        <input type="text" placeholder="Username" value="marco_the_dog">
+        <input type="password" placeholder="Password">
 
+        <button id='login-input-container-button' class="disabled">Login</button>
+        <div class="account-register">Create an account</div>
+    </div>
 
 </div>
 
