--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
     </div>
 
     <div class="login-input-container">
-        <img class="hero-image" src="/static/images/assets/hero.png" alt="">
+        <img class="hero-image" src="/static/images/assets/hero.png" draggable="false">
         <input type="text" placeholder="Username" value="marco_the_dog">
         <input type="password" placeholder="Password">
 
