--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -16,7 +16,7 @@
   --button-text-enabled: #dfdfdf;
   --button-text-disabled: #a0727b;
 
-  --container-max-width: 600px;
+  --container-max-width: 500px;
   --container-min-width: 400px;
 
   --font-size-small: 12px;
@@ -59,6 +59,10 @@ body {
   justify-content: center;
 
   margin-bottom: 40px;
+}
+
+.navbar.home {
+  justify-content: space-between;
 }
 
 /* LOGIN */
@@ -415,6 +419,277 @@ button.disabled {
   background-color: var(--primary);
   border-radius: 40px 0px 0px 40px;
 }
+
+/* HOME */
+/* Profile Message Container */
+.profile-message-container {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+.profile-message-container > img {
+  width: 40px;
+  height: 40px;
+
+  cursor: pointer;
+}
+
+/* Profile Image Container */
+.profile-image-container {
+  width: 40px;
+  height: 40px;
+  background-color: var(--background-secondary);
+  border-radius: 50%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  cursor: pointer;
+}
+
+.profile-image-container > img {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+/* Filters container */
+.filters-container {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 18px;
+}
+
+.filters-container > select {
+  height: 35px;
+  border-radius: 20px;
+
+  font-family: "Poppins", sans-serif;
+  font-size: 14px;
+  font-weight: 600;
+  color: var(--text-primary);
+
+  cursor: pointer;
+
+  text-align: center;
+  padding-left: 8px;
+  padding-right: 20px;
+
+  background-color: var(--background-secondary);
+  background-image: url("/static/images/assets/arrow.svg");
+  background-repeat: no-repeat;
+  background-size: 12px;
+  background-position: right;
+  background-origin: content-box;
+
+  margin-bottom: 0px;
+}
+
+.filters-container > select:first-child {
+  width: 170px;
+}
+
+.filters-container > select:nth-child(2) {
+  width: 180px;
+}
+
+.filters-container > select > option {
+  font-family: "Poppins", sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  color: var(--text-primary);
+  background-color: var(--background);
+}
+
+/* Dog Card */
+.dog-card-container {
+  width: 100%;
+  height: 350px;
+  background-color: var(--background-secondary);
+  border-radius: 15px;
+
+  position: relative;
+}
+
+/* Dog Image Container */
+.dog-image-container {
+  width: calc(100% - 26px);
+  height: calc(100% - 26px);
+  border-radius: 15px;
+  overflow: hidden;
+
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.dog-image-container > img {
+  width: 105%;
+  height: 105%;
+  object-fit: cover;
+}
+
+/* Dog Image Filter */
+.dog-image-filter {
+  width: calc(100% - 26px);
+  height: calc(100% - 26px);
+  border-radius: 15px;
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0) 50%,
+    rgba(0, 0, 0, 0.7) 90%
+  );
+
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/* Dog location container */
+.dog-location-container {
+  height: 27px;
+  background-color: var(--primary);
+  border-radius: 20px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+
+  padding-left: 8px;
+  padding-right: 10px;
+
+  position: absolute;
+  top: 32px;
+  right: 32px;
+}
+
+.dog-location-container > div {
+  font-family: "Poppins", sans-serif;
+  font-size: 12px;
+  font-weight: 500;
+  color: var(--text-primary);
+}
+
+/* Dog details container */
+.dog-details-container {
+  display: flex;
+  flex-direction: column;
+
+  position: absolute;
+  bottom: 32px;
+  left: 32px;
+}
+
+.dog-details-container > div {
+  font-family: "Poppins", sans-serif;
+  color: var(--text-primary);
+}
+
+.dog-details-container > div:nth-child(1) {
+  font-weight: 700;
+  font-size: 18px;
+}
+
+.dog-details-container > div:nth-child(2) {
+  font-weight: 500;
+  font-size: 14px;
+  margin-top: -4px;
+}
+
+.dog-details-container > div:nth-child(3) {
+  font-weight: 400;
+  font-size: 12px;
+  margin-top: 5px;
+}
+
+/* Dog card behind */
+.dog-card-behind {
+  width: 450px;
+  height: 200px;
+  background-color: #2d2d2d;
+  border-radius: 15px;
+
+  position: absolute;
+  top: 324px;
+  left: 50%;
+  transform: translate(-50%, 0);
+  z-index: -1;
+}
+
+/* Options Container */
+.options-container {
+  display: flex;
+  gap: 40px;
+  position: absolute;
+  bottom: 70px;
+  left: 50%;
+  transform: translate(-50%, 0);
+}
+
+.reject-container,
+.like-container {
+  width: 75px;
+  height: 75px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  cursor: pointer;
+}
+
+.reject-container > img {
+  width: 37px;
+  height: auto;
+}
+
+.reject-container {
+  background-color: var(--background-secondary);
+  transition: background-color 0.2s ease-out;
+}
+
+.reject-container:hover {
+  background-color: var(--background-hover);
+}
+
+.like-container {
+  background-color: var(--primary);
+  transition: background-color 0.2s ease-out;
+}
+
+.like-container:hover {
+  background-color: var(--button-hover);
+}
+
+.like-container > img {
+  width: 40px;
+  height: auto;
+}
+
+/* Offsprings Message Container */
+.offsprings-message-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  margin-top: 5px;
+}
+.offsprings-message-container > button:nth-child(2) {
+  margin-top: 18px;
+}
+
+.offsprings-message-container > .reject-container {
+  margin-top: 18px;
+}
+
 /* Utilities */
 .hidden {
   display: none;
