--- a/templates/register.html
+++ b/templates/register.html
@@ -17,6 +17,8 @@
         <input id="image-upload-js" type="file" name="image" accept="image/*" style="display: none" />
     </div>
 
+    <div class="error-container face hidden">We detected a person!</div>
+
     <div class="register-input-container-a">
         <div id='input-breed' class="input-loader-container">
             <input id='input-breed-js' type="text" placeholder="Breed">
