--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -72,12 +72,13 @@ body {
   margin-top: -35px;
   margin-bottom: -15px;
 }
+
 .login-input-container {
   display: flex;
   flex-direction: column;
 }
 
-.login-input-container > input[type="text"],
+.login-input-container>input[type="text"],
 input[type="password"] {
   height: 42px;
   border-radius: 10px;
@@ -85,7 +86,7 @@ input[type="password"] {
   background-color: var(--background-secondary);
 }
 
-.login-input-container > input[type="password"] {
+.login-input-container>input[type="password"] {
   margin-bottom: 0px;
 }
 
@@ -160,6 +161,7 @@ input[type="password"] {
     transform: scale(0);
     opacity: 1;
   }
+
   100% {
     transform: scale(1);
     opacity: 0;
@@ -172,7 +174,7 @@ input[type="password"] {
   flex-direction: column;
 }
 
-.register-input-container-a > .input-loader-container {
+.register-input-container-a>.input-loader-container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -186,11 +188,11 @@ input[type="password"] {
   background-color: var(--background-secondary);
 }
 
-.register-input-container-a > .input-loader-container:nth-child(3) {
+.register-input-container-a>.input-loader-container:nth-child(3) {
   margin-bottom: 0px;
 }
 
-.register-input-container-a > .register-progress-container > div {
+.register-input-container-a>.register-progress-container>div {
   width: 33%;
 }
 
@@ -233,6 +235,7 @@ input[type="password"]::placeholder {
   box-sizing: border-box;
   animation: animloader-text 0.3s 0.3s linear infinite alternate;
 }
+
 .text-loader::after,
 .text-loader::before {
   content: "";
@@ -247,6 +250,7 @@ input[type="password"]::placeholder {
   top: 6px;
   animation: animloader-text 0.3s 0.45s linear infinite alternate;
 }
+
 .text-loader::after {
   top: -6px;
   animation-delay: 0s;
@@ -256,6 +260,7 @@ input[type="password"]::placeholder {
   0% {
     width: 2.2px;
   }
+
   100% {
     width: 22px;
   }
@@ -267,7 +272,7 @@ input[type="password"]::placeholder {
   flex-direction: column;
 }
 
-.register-input-container-b > input[type="text"] {
+.register-input-container-b>input[type="text"] {
   height: 42px;
   border-radius: 10px;
   margin-bottom: 18px;
@@ -323,11 +328,11 @@ option {
   gap: 18px;
 }
 
-.select-age-container > select {
+.select-age-container>select {
   margin-bottom: 0px;
 }
 
-.register-input-container-b > .register-progress-container > div {
+.register-input-container-b>.register-progress-container>div {
   width: 66%;
 }
 
@@ -337,7 +342,7 @@ option {
   flex-direction: column;
 }
 
-.register-input-container-c > input[type="text"],
+.register-input-container-c>input[type="text"],
 input[type="password"] {
   height: 42px;
   border-radius: 10px;
@@ -345,11 +350,11 @@ input[type="password"] {
   background-color: var(--background-secondary);
 }
 
-.register-input-container-c > input[type="password"] {
+.register-input-container-c>input[type="password"] {
   margin-bottom: 0px;
 }
 
-.register-input-container-c > .register-progress-container > div {
+.register-input-container-c>.register-progress-container>div {
   width: 100%;
 }
 
@@ -414,7 +419,7 @@ button.disabled {
   margin-top: 40px;
 }
 
-.register-progress-container > div {
+.register-progress-container>div {
   width: 33%;
   height: 100%;
   background-color: var(--primary);
@@ -437,7 +442,7 @@ button.disabled {
   cursor: pointer;
 }
 
-.profile-image-container > img {
+.profile-image-container>img {
   padding-left: 1px;
   padding-top: 1px;
   width: 35px;
@@ -464,6 +469,7 @@ button.disabled {
 
   transition: background-color 0.2s ease-out;
 }
+
 .logout-container:hover {
   background-color: var(--background-hover);
 }
@@ -476,7 +482,7 @@ button.disabled {
   margin-bottom: 18px;
 }
 
-.filters-container > select {
+.filters-container>select {
   height: 35px;
   border-radius: 20px;
 
@@ -501,15 +507,15 @@ button.disabled {
   margin-bottom: 0px;
 }
 
-.filters-container > select:first-child {
+.filters-container>select:first-child {
   width: 170px;
 }
 
-.filters-container > select:nth-child(2) {
+.filters-container>select:nth-child(2) {
   width: 180px;
 }
 
-.filters-container > select > option {
+.filters-container>select>option {
   font-family: "Poppins", sans-serif;
   font-size: 14px;
   font-weight: 500;
@@ -540,7 +546,7 @@ button.disabled {
   transform: translate(-50%, -50%);
 }
 
-.dog-image-container > img {
+.dog-image-container>img {
   width: 105%;
   height: 105%;
   object-fit: cover;
@@ -578,7 +584,7 @@ button.disabled {
   right: 32px;
 }
 
-.dog-location-container > div {
+.dog-location-container>div {
   font-family: "Poppins", sans-serif;
   font-size: 12px;
   font-weight: 500;
@@ -595,23 +601,23 @@ button.disabled {
   left: 32px;
 }
 
-.dog-details-container > div {
+.dog-details-container>div {
   font-family: "Poppins", sans-serif;
   color: var(--text-primary);
 }
 
-.dog-details-container > div:nth-child(1) {
+.dog-details-container>div:nth-child(1) {
   font-weight: 700;
   font-size: 18px;
 }
 
-.dog-details-container > div:nth-child(2) {
+.dog-details-container>div:nth-child(2) {
   font-weight: 500;
   font-size: 14px;
   margin-top: -4px;
 }
 
-.dog-details-container > div:nth-child(3) {
+.dog-details-container>div:nth-child(3) {
   font-weight: 400;
   font-size: 12px;
   margin-top: 5px;
@@ -664,7 +670,7 @@ button.disabled {
   cursor: pointer;
 }
 
-.reject-container > img {
+.reject-container>img {
   width: 37px;
   height: auto;
 }
@@ -687,7 +693,7 @@ button.disabled {
   background-color: var(--button-hover);
 }
 
-.like-container > img {
+.like-container>img {
   width: 40px;
   height: auto;
 }
@@ -714,11 +720,11 @@ button.disabled {
   margin-top: 5px;
 }
 
-.offsprings-message-container > button {
+.offsprings-message-container>button {
   margin-top: 30px;
 }
 
-.offsprings-message-container > .reject-container {
+.offsprings-message-container>.reject-container {
   margin-top: 18px;
 }
 
@@ -732,16 +738,27 @@ button.disabled {
   margin-top: 20px;
 }
 
+.error-container.face {
+  margin-top: -20px;
+  margin-bottom: 20px;
+}
+
 /* Carousel Slides */
 .carousel-container {
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgba(0, 0, 0, 0.75); /* Black w/ opacity */
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: rgba(0, 0, 0, 0.75);
+  /* Black w/ opacity */
 
   display: flex;
   justify-content: center;
@@ -761,7 +778,7 @@ button.disabled {
   height: 400px;
 }
 
-.slide > img {
+.slide>img {
   display: block;
   width: 100%;
   height: 400px;
